# eduVisionAeroRC

./: .gitignore  Dockerfile  README.md  config.json  pyproject.toml
evaluation_function/: evaluation.py  evaluation_test.py
